--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -140,7 +140,7 @@
                                 </items>
                             </navigationBar>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ZUu-iD-Y2M">
-                                <rect key="frame" x="0.0" y="88" width="390" height="756"/>
+                                <rect key="frame" x="0.0" y="88" width="390" height="670"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
                         </subviews>
@@ -150,6 +150,9 @@
                     <tabBarItem key="tabBarItem" title="Map" image="mappin.and.ellipse" catalog="system" id="SpP-qT-AY9"/>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="mapView" destination="ZUu-iD-Y2M" id="vJC-fl-YAF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="56l-u6-qKk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -281,12 +284,12 @@ today?</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VN9-l7-HIU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1814" y="45"/>
+            <point key="canvasLocation" x="1978" y="77"/>
         </scene>
         <!--Tab View Controller-->
         <scene sceneID="uML-Mm-Wzw">
             <objects>
-                <tabBarController id="pPm-1Z-is5" customClass="TabViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabViewController" id="pPm-1Z-is5" customClass="TabViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WmF-96-P7p">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -366,6 +369,7 @@ today?</string>
                     </view>
                     <navigationItem key="navigationItem" id="YOT-xX-2TA"/>
                     <connections>
+                        <outlet property="mapView" destination="Kj4-Bz-fQh" id="U7B-SV-Dg2"/>
                         <outlet property="mediaTextField" destination="dQL-IN-d25" id="Sho-gf-1SC"/>
                     </connections>
                 </viewController>
